tests/ui-stable/non-lit.stderr
error: proc-macro derive panicked
 --> $DIR/non-lit.rs:4:5
  |
4 |     indoc!(fail);
  |     ^^^^^^^^^^^^^
  |
  = help: message: argument must be a single string literal
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
